added multiple .net support
added support to run in multiple versions of dotnet

--- a/LicenseGenerator.csproj
+++ b/LicenseGenerator.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+	<TargetFrameworks>netcoreapp3.1;net461;netstandard2.1;net6.0;</TargetFrameworks>
     <AssemblyName>LicenseGenerator</AssemblyName>
     <RootNamespace>Org.Reddragonit.LicenseGenerator</RootNamespace>
     <PackageId>Org.Reddragonit.LicenseGenerator</PackageId>
@@ -20,12 +20,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.IO.Compression" Version="4.3.0" />
   </ItemGroup>
 
   <PropertyGroup>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <Version>1.0.3</Version>
+    <Version>1.0.4</Version>
+    <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
   </PropertyGroup>
 
 </Project>
