--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: ['3.1', '6.0' ]
+        dotnet-version: ['3.1.x', '6.0.x' ]
 
     steps:
       - uses: actions/checkout@v3
