--- a/LicenseGenerator/LicenseGenerator.csproj
+++ b/LicenseGenerator/LicenseGenerator.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	<TargetFrameworks>netcoreapp3.1;net461;netstandard2.1;net6.0;</TargetFrameworks>
+	<TargetFrameworks>net6.0;net7.0;</TargetFrameworks>
     <AssemblyName>LicenseGenerator</AssemblyName>
     <RootNamespace>Org.Reddragonit.LicenseGenerator</RootNamespace>
     <PackageId>Org.Reddragonit.LicenseGenerator</PackageId>
@@ -16,7 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.0">
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
