--- a/LicenseGenerator/LicenseGenerator.csproj
+++ b/LicenseGenerator/LicenseGenerator.csproj
@@ -11,7 +11,7 @@
     <RepositoryUrl>https://github.com/roger-castaldo/LicenseGenerator</RepositoryUrl>
     <RepositoryType>github</RepositoryType>
     <PackageTags>dotnet license</PackageTags>
-    <PackageReleaseNotes>added functionality to double verify a loaded signled license by passing the public key through</PackageReleaseNotes>
+    <PackageReleaseNotes>rewrite of base code which will cause old licenses to fail</PackageReleaseNotes>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
@@ -26,7 +26,7 @@
   <PropertyGroup>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <Version>1.0.4</Version>
+    <Version>2.0.0</Version>
     <PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
